[tool.poetry]
name = "queuetracer"
version = "0.1.0"
description = ""
authors = ["alufers <alufers@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyelftools = "^0.31"
imgui-bundle = "^1.6.0"
pyglm = "^2.7.3"
pylink-square = "^1.3.0"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
queuetracer = "queuetracer.scripts.queuetracer:main"
